Fix spacing issues for about us and contact. Add check in sign up commands for correct information

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6772,7 +6772,7 @@ h3 {
 
 /* line 56, ../sass/mystyles/_body.scss */
 #vol_up_form {
-  margin: 0 0 8rem 0; }
+  margin: -4rem 0 8rem 0; }
 
 /* line 60, ../sass/mystyles/_body.scss */
 #org_in_form {
@@ -6780,7 +6780,7 @@ h3 {
 
 /* line 64, ../sass/mystyles/_body.scss */
 #org_up_form {
-  margin: -5rem 0 5rem 0; }
+  margin: -7rem 0 5rem 0; }
 
 /* line 2, ../sass/mystyles/_buttons.scss */
 .button {
@@ -6891,7 +6891,7 @@ h3 {
 
 /* line 56, ../sass/mystyles/_body.scss */
 #vol_up_form {
-  margin: 0 0 8rem 0; }
+  margin: -4rem 0 8rem 0; }
 
 /* line 60, ../sass/mystyles/_body.scss */
 #org_in_form {
@@ -6899,7 +6899,7 @@ h3 {
 
 /* line 64, ../sass/mystyles/_body.scss */
 #org_up_form {
-  margin: -5rem 0 5rem 0; }
+  margin: -7rem 0 5rem 0; }
 
 /*!
  *  Font Awesome 4.1.0 by @davegandy - http://fontawesome.io - @fontawesome
