--- a/public/sass/mystyles/_body.scss
+++ b/public/sass/mystyles/_body.scss
@@ -54,7 +54,7 @@ h3{
 }
 
 #vol_up_form {
-  margin: 0 0 8rem 0;
+  margin: -4rem 0 8rem 0;
 }
 
 #org_in_form {
@@ -62,5 +62,8 @@ h3{
 }
 
 #org_up_form {
-  margin: -5rem 0 5rem 0;
+  margin: -7rem 0 5rem 0;
 }
+
+
+
